# Robust-Gesture-Recognition

./: CMakeLists.txt  README.md  main.c  readme.html
src/detector/: detector.h
src/ui/: UI.h
src/util/: config.h  util.h
